--- a/public/stylesheets/portfolio.css
+++ b/public/stylesheets/portfolio.css
@@ -3,24 +3,21 @@
 }
 
 html, body {
-/*	background-color: black;
+	background-color: black;
 	margin: 0;
-	padding: 0;*/
+	padding: 0;
 	height: 100%;
 }
 
 /* ________NAVIGATION BEGIN_________ */
 .navbar {
-	margin: 0;
+	margin: 20px;
 	padding: 0;
 	border: 0;
 }
 
  .navbar-header {
 	background-color: black;
-	height: 100px;
-	padding: 20px;
-	border-color: black;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -29,6 +26,7 @@ html, body {
 
 .navbar-collapse {
 	background-color: black;
+	border-top: 0px;
 }
 
 .navbar-toggle, .icon-bar {
@@ -72,9 +70,9 @@ html, body {
 
 .row {
 	width: 100%;
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: 0px;
+	padding: 0px;
+	border: 0px;
 }
 
 #mainDiv {
@@ -93,7 +91,7 @@ html, body {
 
 .page-header h1 {
 	text-align: center;
-	font-size: 600%;
+	font-size: 500%;
 	padding: 50px;
 }
 
